--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,12 @@
-<div class="header mat-toolbar mat-primary">
-  <div class="d-flex justify-contents-center" style="text-align: center;">
-    <div class="flex-fill">
-      <img class="col-12 col-md-8 col-lg-6" src="assets/images/logos/logo_with_text_light.png">
-      <h2 style="font-size: 18px;font-weight: 400;line-height: 28px;margin: 15px 0 25px;">A simple, clean, responsive,
-        <a id="matLink" href="https://material.angular.io">angular material</a> design inspired basic and advanced
-        audio players for
-        Angular 7/8/9</h2>
+
+<!--<div class="header mat-toolbar mat-autocomplete-panel">-->
+<!--  <div class="d-flex justify-contents-center" style="text-align: center;">-->
+<!--    <div class="flex-fill">-->
+
+<!--      <h2 style="font-size: 18px;font-weight: 400;line-height: 28px;margin: 15px 0 25px;">A simple, clean, responsive,-->
+<!--        <a id="matLink" href="https://material.angular.io">angular material</a> design inspired basic and advanced-->
+<!--        audio players for-->
+<!--        Angular 7/8/9</h2>-->
       <a style="text-decoration: none;" class="docs-button mat-raised-button" mat-raised-button=""
         routerlink="/guide/getting-started" tabindex="0" aria-disabled="false" [routerLink]="['/guide/getting-started']"><span
           class="mat-button-wrapper">Get
@@ -13,12 +14,23 @@
         <div class="mat-button-ripple mat-ripple" matripple=""></div>
         <div class="mat-button-focus-overlay"></div>
       </a>
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+<div class="container">
+  <div class="row">
+    <div class="col-12" style="margin-top: 20px">
+      <mat-card style="margin: 50px 0;">
+        <mat-card-title>Nguyễn Đồng Chính Nguyễn Đồng ChínhNguyễn Đồng ChínhNguyễn Đồng ChínhNguyễn Đồng ChínhNguyễn Đồng ChínhNguyễn Đồng Chính</mat-card-title>
+      </mat-card>
+
     </div>
   </div>
 </div>
 <div class="container">
   <div class="row">
     <div class="col-12" style="margin-top: 20px;">
+
       <mat-card style="margin: 50px 0;">
         <mat-card-header>
           <mat-card-title>Material Style Basic Audio Player</mat-card-title>
