--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,8 @@
                     fill="currentColor" class="octo-body"></path>
             </svg></a>
         <a style="text-decoration: none;" class="docs-button mat-raised-button" mat-raised-button=""
-           routerlink="/guide/getting-started" tabindex="0" aria-disabled="false" [routerLink]="['/guide/getting-started']"><span
-                class="mat-button-wrapper">Get
-          started</span>
+           tabindex="0" aria-disabled="false" [routerLink]="['register']"><span
+                class="mat-button-wrapper">Register</span>
             <div class="mat-button-raised mat-raised" matripple=""></div>
             <div class="mat-button-focus-overlay"></div>
         </a>
