--- a/src/app/form-login/register/register.component.html
+++ b/src/app/form-login/register/register.component.html
@@ -6,10 +6,10 @@
                  Your registration is successfull! Please login!
              </div>
                 <ng-template #signupForm>
-                    <div class="row col-12" style="max-width:350px;">
+                    <div class="row col-12" style="max-width:500px;">
                         <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
                             <div class="form-group">
-                                <label for="name">Your name</label>
+                                <label>Your name</label>
                                 <input type="text" class="form-control" name="name" [(ngModel)]="form.name" #name="ngModel" required />
                                 <div *ngIf="f.submitted && name.invalid">
                                     <div *ngIf="name.errors.required">Name is required</div>
@@ -17,7 +17,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="username">Username</label>
-                                <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
+                                <input type="text" size="150" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
                                        required />
                                 <div *ngIf="f.submitted && username.invalid">
                                     <div *ngIf="username.errors.required">Username is required</div>
