--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,34 @@
     <a style="color: yellow; text-decoration: none;" aria-label="Angular Audio Player" class="docs-button mat-button"
        mat-button tabindex="0" aria-disabled="false" [routerLink]="['/']"><span class="mat-button-wrapper"><img
             width="30px;" alt="angular" class="docs-angular-logo"
-            src="https://img.icons8.com/officel/16/000000/musical-notes.png"><b>Home</b></span>
+            src="../assets/images/icons/mp3.png" height="30" width="30"/><b>Home</b></span>
         <div class="mat-button-ripple mat-ripple" matripple=""></div>
         <div class="mat-button-focus-overlay"></div>
     </a><span class="example-spacer"></span>
-    <a style="color: springgreen; text-decoration: none;" aria-label="Angular Audio Player"
+    <a *ngIf="!authority" style="color: springgreen; text-decoration: none;" aria-label="Angular Audio Player"
        class="docs-button mat-button"
        mat-button tabindex="0" aria-disabled="false" [routerLink]="['register']"><span class="mat-button-wrapper"><img
             width="30px;" alt="angular" class="docs-angular-logo"
-            src="https://img.icons8.com/dusk/64/000000/add-user-group-woman-man.png"><b>Register</b></span>
+            src="../assets/images/icons/add_user.png" height="30" [width]="30"/><b>Register</b></span>
+        <div class="mat-button-ripple mat-ripple" matripple=""></div>
+        <div class="mat-button-focus-overlay"></div>
+    </a><span class="example-spacer"></span>
+    <!-- USER ACCOUNT -->
+    <a *ngIf="authority === 'user'" style="color: springgreen; text-decoration: none;" aria-label="Angular Audio Player"
+       class="docs-button mat-button"
+       mat-button tabindex="0" aria-disabled="false" [routerLink]="['user']"><span class="mat-button-wrapper"><img
+            width="30px;" alt="angular" class="docs-angular-logo"
+            src="https://img.icons8.com/dusk/64/000000/user-folder.png"><b>User Account</b></span>
+        <div class="mat-button-ripple mat-ripple" matripple=""></div>
+        <div class="mat-button-focus-overlay"></div>
+    </a><span class="example-spacer"></span>
+    <!-- LOGIN -->
+    <a *ngIf="!authority" style="color: springgreen; text-decoration: none;" aria-label="Angular Audio Player"
+       class="docs-button mat-button"
+       mat-button tabindex="0" aria-disabled="false" [routerLink]="['login']"><span class="mat-button-wrapper"><img
+            width="30px;" alt="angular" class="docs-angular-logo"
+            src="../assets/images/icons/login.png"
+                                                                         width="30px"/><b>Login</b></span>
         <div class="mat-button-ripple mat-ripple" matripple=""></div>
         <div class="mat-button-focus-overlay"></div>
     </a><span class="example-spacer"></span>
