--- a/src/app/form-login/user/user.component.html
+++ b/src/app/form-login/user/user.component.html
@@ -1,46 +1,51 @@
-<div class="container">
-    <div class="row">
-        <div class="col-12" style="margin-top: 20px">
-            <mat-card class="example-card">
-                <mat-card-header>
-                    <div mat-card-avatar class="example-header-image"></div>
-                    <mat-card-title>Shiba Inu</mat-card-title>
-                    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-                </mat-card-header>
-                <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                <mat-card-content>
-                    <p>
-                        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                        bred for hunting.
-                    </p>
-                </mat-card-content>
-                <mat-card-actions>
-                    <button mat-button>LIKE</button>
-                    <button mat-button>SHARE</button>
-                </mat-card-actions>
-            </mat-card>
-            <mat-card style="margin: 50px 0;">
-                <div class="example-box" style="margin: auto" cdkDrag>
 
-                    <div *ngIf="info.token; else loggedOut">
-                        <h6 style="color: #960050">Di chuyển Box! Nếu Bạn Thích!</h6>
-                        <h5 class="text-primary">Your Information</h5>
-                        <p>
-                            <strong>Username:</strong> {{info.username}}<br/>
-                            <!--                    <strong>Roles:</strong> {{info.roles}}<br/>-->
-                            <!--                    <strong>Token:</strong> {{info.token}}.-->
-                        </p>
-                        <button class="btn btn-danger" (click)="logout()">Logout</button>
-                        <button class="btn btn-primary" routerLink="/changepass">Change Pass</button>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-12" style="margin-top: 20px">
+                        <mat-card class="example-card">
+                            <mat-card-header>
+                                <div mat-card-avatar>{{info._avatar}}</div>
+                                <mat-card-title style="color: #2c8ebb"> Your Information</mat-card-title>
+<!--                                <h5 class="text-primary">Your Information</h5>-->
+                                <mat-card-title STYLE="color: fuchsia">User name: {{info.username}}</mat-card-title>
+                            </mat-card-header>
+<!--                            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
+<!--                            <mat-card-content>-->
+<!--                                <p>-->
+<!--                                    The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.-->
+<!--                                    A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally-->
+<!--                                    bred for hunting.-->
+<!--                                </p>-->
+<!--                            </mat-card-content>-->
+<!--                            <mat-card-actions>-->
+<!--                                <button mat-button>LIKE</button>-->
+<!--                                <button mat-button>SHARE</button>-->
+<!--                            </mat-card-actions>-->
+
+<!--                                <div class="example-box" style="margin: auto" cdkDrag>-->
+
+                                    <div *ngIf="info.token; else loggedOut">
+
+<!--                                        <p>-->
+<!--                                            <strong>Username:</strong> {{info.username}}<br/>-->
+<!--                                            &lt;!&ndash;                    <strong>Roles:</strong> {{info.roles}}<br/>&ndash;&gt;-->
+<!--                                            &lt;!&ndash;                    <strong>Token:</strong> {{info.token}}.&ndash;&gt;-->
+<!--                                        </p>-->
+                                        <button class="btn btn-danger" (click)="logout()">Logout</button>
+                                        <button class="btn btn-primary"routerLink="/changeProfile">Change Pass</button>
+                                    </div>
+                                    <ng-template #loggedOut>
+                                        <h1 style="color: #f92672">Please login!!!</h1>
+                                    </ng-template>
+<!--                                </div>-->
+
+
+                        </mat-card>
+
                     </div>
-                    <ng-template #loggedOut>
-                        Please login.
-                    </ng-template>
                 </div>
+            </div>
 
-            </mat-card>
 
-        </div>
-    </div>
-</div>
+
