--- a/src/app/form-login/login/login.component.html
+++ b/src/app/form-login/login/login.component.html
@@ -62,8 +62,16 @@
         <div class="col-12" style="margin-top: 20px">
             <mat-card style="margin: 50px 0;">
                 <div *ngIf="isLoggedIn; else loggedOut">
-                    <h1 style="color: fuchsia">Welcome <strong style="color: blue">{{userName}}</strong> !!! Chúc Bạn có những giây phút thư giãn và
-                        vui vẻ!!</h1>
+                    <h1 style="color: #2c8ebb"> Welcome: <strong style="color: #f92672"> {{userName}}</strong></h1>
+                    <a style="color: darkred; text-decoration: none;" aria-label="Angular Audio Player"
+                       class="docs-button mat-button"
+                       mat-button tabindex="0" aria-disabled="false" href="user">
+                        <mat-icon color="accent" matSuffix>account_circle</mat-icon>
+
+                         <b>User Account</b>
+                        <div class="mat-button-ripple mat-ripple" matripple=""></div>
+                        <div class="mat-button-focus-overlay"></div>
+                    </a><span class="example-spacer"></span>
                 </div>
                 <ng-template #loggedOut>
                     <form name="form" (ngSubmit)="f.form.valid && onSubmit()"
@@ -98,7 +106,7 @@
                         </mat-form-field>
 
                         <br>
-                        <button style="color: springgreen; text-decoration: none;" aria-label="Angular Audio Player"
+                        <button routerLink="user" style="color: springgreen; text-decoration: none;" aria-label="Angular Audio Player"
                            class="docs-button mat-button"
                            mat-button tabindex="0" aria-disabled="false"><span class="mat-button-wrapper"><img
                                 width="30px;" alt="angular" class="docs-angular-logo"
@@ -128,6 +136,6 @@
         </div>
     </div>
 </div>
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
 
 
