--- a/src/app/form-login/login/login.component.html
+++ b/src/app/form-login/login/login.component.html
@@ -61,11 +61,11 @@
     <div class="row">
         <div class="col-12" style="margin-top: 20px">
             <mat-card style="margin: 50px 0;">
-                <div *ngIf="isLoggedIn; else loggedOut">
+                <div *ngIf="isLoggedIn; else loggedOut" routerLink="/user">
                     <h1 style="color: #2c8ebb"> Welcome: <strong style="color: #f92672"> {{userName}}</strong></h1>
                     <a style="color: darkred; text-decoration: none;" aria-label="Angular Audio Player"
                        class="docs-button mat-button"
-                       mat-button tabindex="0" aria-disabled="false" href="user">
+                       mat-button tabindex="0" aria-disabled="false" href="/user">
                         <mat-icon color="accent" matSuffix>account_circle</mat-icon>
 
                          <b>User Account</b>
