--- a/src/app/form-login/login/login.component.html
+++ b/src/app/form-login/login/login.component.html
@@ -61,7 +61,7 @@
     <div class="row">
         <div class="col-12" style="margin-top: 20px">
             <mat-card style="margin: 50px 0;">
-                <div *ngIf="isLoggedIn; else loggedOut" routerLink="/user">
+                <div *ngIf="isLoggedIn; else loggedOut">
                     <h1 style="color: #2c8ebb"> Welcome: <strong style="color: #f92672"> {{userName}}</strong></h1>
                     <a style="color: darkred; text-decoration: none;" aria-label="Angular Audio Player"
                        class="docs-button mat-button"
@@ -106,7 +106,7 @@
                         </mat-form-field>
 
                         <br>
-                        <button routerLink="user" style="color: springgreen; text-decoration: none;" aria-label="Angular Audio Player"
+                        <button  style="color: springgreen; text-decoration: none;" aria-label="Angular Audio Player"
                            class="docs-button mat-button"
                            mat-button tabindex="0" aria-disabled="false"><span class="mat-button-wrapper"><img
                                 width="30px;" alt="angular" class="docs-angular-logo"
@@ -136,6 +136,6 @@
         </div>
     </div>
 </div>
-<!--<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
 
 
