--- a/src/app/form-login/login/login.component.html
+++ b/src/app/form-login/login/login.component.html
@@ -74,7 +74,7 @@
                     </button><span class="example-spacer"></span>
                 </div>
                 <ng-template #loggedOut>
-                    <form name="form" (ngSubmit)="f.form.valid && onSubmit()"
+                    <form class="form-login" name="form" (ngSubmit)="f.form.valid && onSubmit()"
                           #f="ngForm" novalidate>
 
                         <mat-form-field style="width: 350px" appearance="outline">
