--- a/src/app/form-login/register/register.component.html
+++ b/src/app/form-login/register/register.component.html
@@ -134,8 +134,8 @@
                             <div class="mat-button-ripple mat-ripple" matripple=""></div>
                             <div class="mat-button-focus-overlay"></div>
                         </button><span class="example-spacer"></span>
-                        <div *ngIf="f.submitted && isSignUpFailed" class="alert alert-warning">-->
-                            <!--                                    Signup failed!<br/>{{errorMessage}}-->
+                        <div *ngIf="f.submitted && isSignUpFailed" class="alert alert-warning">
+                                                                Signup failed!<br/>{{errorMessage}}
                         </div>
 
                     </form>
