--- a/src/app/form-login/user/user.component.html
+++ b/src/app/form-login/user/user.component.html
@@ -33,7 +33,7 @@
 <!--                                            &lt;!&ndash;                    <strong>Token:</strong> {{info.token}}.&ndash;&gt;-->
 <!--                                        </p>-->
                                         <button routerLink="/" class="btn btn-danger" (click)="logout()">Logout</button>
-                                        <button class="btn btn-primary"routerLink="/changeProfile">Change Pass</button>
+                                        <button class="btn btn-primary"routerLink="/changepassword">Change Pass</button>
                                     </div>
                                     <ng-template #loggedOut>
                                         <h1 style="color: #f92672">Please login!!!</h1>
