--- a/src/app/form-login/change-profile/change-profile.component.html
+++ b/src/app/form-login/change-profile/change-profile.component.html
@@ -12,7 +12,7 @@
                                 <div class="panel-body" style="padding-top:30px">
                                     <div style="display:none" id="login-alert"
                                          class="alert alert-danger col-sm-12"></div>
-                                    <form class="form" name="form" (ngSubmit)="f.form.valid" #f="ngForm" novalidate>
+
                                         <div *ngIf="isChangePassed; else ChanePassForm">
                                             <p class="message-signup" style="color: limegreen">Your registration is
                                                 successful. Please login!</p>
@@ -26,7 +26,7 @@
                                                         Mật Khẩu Cũ:
                                                     </label>
                                                     <input type="password" class="form-control"
-                                                           name="firstName" placeholder="Current Password"
+                                                           name="currentPassword" placeholder="Current Password"
                                                            [(ngModel)]="form.currentPassword"
                                                            #currentPassword="ngModel" required/>
                                                     <div *ngIf="f.submitted && currentPassword.invalid">
@@ -41,7 +41,7 @@
                                                         Mật Khẩu Mới:
                                                     </label>
                                                     <input type="password" class="form-control"
-                                                           name="lastName" placeholder="New Password"
+                                                           name="newPassword" placeholder="New Password"
                                                            [(ngModel)]="form.newPassword" #newPassword="ngModel"
                                                            required/>
                                                     <div *ngIf="f.submitted && newPassword.invalid">
@@ -56,7 +56,7 @@
                                                         Xác Nhận Mật Khẩu Mới:
                                                     </label>
                                                     <input type="password" class="form-control"
-                                                           name="lastName" placeholder="Confirm Password"
+                                                           name="confirmPassword" placeholder="Confirm Password"
                                                            [(ngModel)]="form.confirmPassword" #confirmPassword="ngModel"
                                                            required/>
                                                     <div *ngIf="f.submitted && confirmPassword.invalid">
@@ -75,7 +75,7 @@
                                             </form>
                                         </ng-template>
 
-                                    </form>
+
                                 </div> <!--Body-->
                             </div>
 
@@ -88,5 +88,6 @@
         </div>
     </div>
 </div>
+<router-outlet></router-outlet>
 
 
