--- a/src/app/form-login/user/user.component.html
+++ b/src/app/form-login/user/user.component.html
@@ -34,6 +34,7 @@
 <!--                                        </p>-->
                                         <button routerLink="/" class="btn btn-danger" (click)="logout()">Logout</button>
                                         <button class="btn btn-primary"routerLink="/changepassword">Change Pass</button>
+                                        <button class="btn btn-danger"routerLink="/addAvatar">Change Avatar</button>
                                     </div>
                                     <ng-template #loggedOut>
                                         <h1 style="color: #f92672">Please login!!!</h1>
