--- a/src/app/form-login/admin/admin.component.html
+++ b/src/app/form-login/admin/admin.component.html
@@ -33,6 +33,7 @@
                     <!--                                        </p>-->
                     <button routerLink="/" class="btn btn-danger" (click)="logout()">Logout</button>
                     <button class="btn btn-primary"routerLink="/changepassword">Change Pass</button>
+                    <button class="btn btn-danger"routerLink="/detailSinger">Detail Singer</button>
 
                 </div>
                 <ng-template #loggedOut>
