--- a/src/app/form-login/user/user.component.html
+++ b/src/app/form-login/user/user.component.html
@@ -30,7 +30,7 @@
                                             <mat-list>
                                                 <mat-list-item>
                                                     <h3 mat-line>
-                                                        <a mat-button [routerLink]="['/change-profile/',user.id]">Change Profile</a>
+                                                        <a mat-button [routerLink]="['/change-password/',user.id]">Change Profile</a>
                                                     </h3>
                                                 </mat-list-item>
                                             </mat-list>
@@ -61,7 +61,7 @@
 <!--                    <mat-list>-->
 <!--                        <mat-list-item *ngFor="let user of users">-->
 <!--                            <h3 mat-line>-->
-<!--                                <a mat-button [routerLink]="['/change-profile', user.id]">{{user.name}}</a>-->
+<!--                                <a mat-button [routerLink]="['/change-password', user.id]">{{user.name}}</a>-->
 <!--                            </h3>-->
 <!--                        </mat-list-item>-->
 <!--                    </mat-list>-->
