--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -75,7 +75,7 @@ h6 {
 }
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: magenta;
+  background-color: #ff03cc;
   overflow: hidden;
 }
 
@@ -129,4 +129,3 @@ h6 {
     text-align: left;
   }
 }
-  
